[gd_scene load_steps=2 format=3 uid="uid://b7cwcqnkspaqa"]

[ext_resource type="Script" uid="uid://bt473hs0x73sj" path="res://src/gameScreen/card/cardManager/card_manager.gd" id="1_pqcnm"]

[node name="cardManager" type="Node2D"]
script = ExtResource("1_pqcnm")

[node name="TopUI" type="Control" parent="."]
z_index = 5
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 328.0

[node name="ColorRect" type="ColorRect" parent="TopUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="TopUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="TopUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TopUI/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="repsOrSeconds" type="Label" parent="TopUI/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "REPS:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="numOfThing" type="Label" parent="TopUI/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "12"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="TopUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TopUI/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6

[node name="textOfCards" type="Label" parent="TopUI/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "TOTAL CARDS:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="totalCardCounts" type="Label" parent="TopUI/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="TopUI/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="timeTxt" type="Label" parent="TopUI/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "TOTAL WORKOUT
TIME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="totalTime" type="Label" parent="TopUI/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="TopUI/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="timeForSet" type="Label" parent="TopUI/HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "TIME TAKEN
FOR SET"
horizontal_alignment = 1
vertical_alignment = 1

[node name="timeOfSet" type="Label" parent="TopUI/HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="TopUI/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="TopUI/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="cardStartPos" type="Marker2D" parent="."]
position = Vector2(360, 696)

[node name="BottomUI" type="Control" parent="."]
z_index = 5
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_top = 1120.0
offset_right = 720.0
offset_bottom = 1275.0

[node name="ColorRect" type="ColorRect" parent="BottomUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="BottomUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="BottomUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="BottomUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="finishRun" type="Button" parent="BottomUI/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
text = "FINISH RUN"
